v0.1.0, 2014-08-18
* Initial release.

v0.2.0, 2014-08-29
* Added methods to read images and time series directly from poets base class.
* Functions for reading time series are now callable with gridpoint index or
longitude/latitude.
* Added time_series package with features such as deseasonalizing.
* Fixed bugs that occured on resampling.

v0.3.0, 2014-09-22
* Implemented web interface for displaying images and time series in a browser.
* Now supports GeoTiff metadata.

v0.3.1, 2014-11-24
* Preformance boost on resampling of datasets.
* Tons of bugfixes.
* Added missing unit test, implemented test suite.
* Supports compressed input files.

v0.3.2, 2014-11-24
* Hotfixes in previous version

v0.3.3, 2015-XX-XX
* Implemented option to provide separate NetCDF files for sources .
* Added method to get all variables from a source.
* Added check if a variable exists in a source.
* Added timeout-handler in ftp-download.
* Fixed bug that caused gaps in data.
* Added function that attempts to fill gaps in data.
* Improvements in web-app.